--- a/CorinneCity/Views/Shared/_Layout.cshtml
+++ b/CorinneCity/Views/Shared/_Layout.cshtml
@@ -30,11 +30,11 @@
                     <nav>
                         <ul id="topnav">
                             <li class="last">@Html.ActionLink("About", "CityInfo", "Home")
-								<ul>
-									<li><a href="http://www.boxeldercounty.org/corinne-history.htm">City History</a></li>
-									<li><a href="/Images/City Map 2013.pdf">City Map</a></li>
-									<li><a href="/Images/zonemap.pdf">Zoning Map</a></li>
-								</ul>
+	                            <ul>
+		                            <li><a href="http://www.boxeldercounty.org/corinne-history.htm" target="_blank">City History</a></li>
+		                            <li><a href="/Images/City Map 2013.pdf" target="_blank">City Map</a></li>
+		                            <li><a href="/Images/zonemap.pdf" target="_blank">Zoning Map</a></li>
+	                            </ul>
 							</li>
                             <li>
                                 @Html.ActionLink("Activities", "", "Home")
