Fix formatting on calendar page and additions for 3v3 tournament

--- a/CorinneCity/Views/IndActivities/Basketball.cshtml
+++ b/CorinneCity/Views/IndActivities/Basketball.cshtml
@@ -6,8 +6,19 @@
 <div class="wrapper col3">
 	<div id="container">
 		<h1>@ViewBag.Title</h1>
-		On @Model.Date, the city will be hosting a 3 v 3 basketball tournament at City Hall starting at @Model.Time.
-		Registration will take place just prior to the first games, so get your team together and come find out
-		who the best ballers are!
+		<table>
+			<tr>
+				<td>
+					On @Model.Date, the city will be hosting a 3 v 3 basketball tournament at Flack Park starting at @Model.Time.
+					Registration needs to be turned in to City Hall no later than 11 AM the day before the tournament starts. Get your team together and come find out
+					who the best ballers are!<br />
+				</td>
+			</tr>
+			<tr>
+				<td align="center">
+					<img src="~/Images/aarongordon.gif" alt="Awesome dunk" style="margin-left: 30px" />
+				</td>
+			</tr>
+		</table>
 	</div>
 </div>
